2009-09-25  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/partition.h (__parallel_nth_element):
        Correct comment.

2009-09-24  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/algo.h: Uglify internal identifiers;
        correct line breaks.
        * include/parallel/for_each.h: Likewise.
        * include/parallel/numeric: Likewise.
        * include/parallel/omp_loop.h: Likewise.
        * include/parallel/omp_loop_static.h: Likewise.
        * include/parallel/par_loop.h: Likewise.
        * include/parallel/workstealing.h: Likewise.

2009-09-24  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/base.h (_EqualFromLess):  Move _Compare template
        parameter to the end as of others.
        * include/parallel/algobase.h
        (__lexicographical_compare_switch): Likewise.

2009-09-23  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/algobase.h: Uglify internal identifiers;
        correct line breaks.
        * include/parallel/algo.h: Likewise.
        * include/parallel/base.h: Likewise.
        * include/parallel/equally_split.h: Likewise.
        * include/parallel/find.h: Likewise.
        * include/parallel/find_selectors.h: Likewise.
        * include/parallel/for_each_selectors.h: Likewise.
        * include/parallel/list_partition.h: Likewise.
        * include/parallel/losertree.h: Likewise.
        * include/parallel/merge.h: Likewise.
        * include/parallel/multiseq_selection.h: Likewise.
        * include/parallel/multiway_merge.h: Likewise.
        * include/parallel/multiway_mergesort.h: Likewise.
        * include/parallel/numeric: Likewise.
        * include/parallel/numericfwd.h: Likewise.
        * include/parallel/omp_loop.h: Likewise.
        * include/parallel/omp_loop_static.h: Likewise.
        * include/parallel/par_loop.h: Likewise.
        * include/parallel/partition.h: Likewise.
        * include/parallel/random_shuffle.h: Likewise.